# clawsouls-ros

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
clawsouls_ros/: __init__.py  personality_node.py  safety_monitor.py  soul_loader.py  utils.py
config/: params.yaml
launch/: soul_bringup.launch.py
souls/care-companion/: SOUL.md  soul.json
test/: test_safety_monitor.py  test_soul_loader.py
